<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/events_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>