...


            <Button
                android:id="@+id/linkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Create Link Token"
                app:layout_constraintTop_toBottomOf="@id/skipSurvey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


...
